Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19041

[ThreadSanitizer] Data race in filemgr's bcache

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • .master
    • forestdb
    • None
    • Untriaged
    • Unknown

    Description

      11:02:03 WARNING: ThreadSanitizer: data race (pid=108225)
      11:02:03 Write of size 8 at 0x7d64000c7720 by thread T14 (mutexes: write M57456, write M13):
      11:02:03 #0 _fname_create(filemgr*) /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/blockcache.cc:802 (fdb_functional_test+0x0000004e602f)
      11:02:03 #1 bcache_write /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/blockcache.cc:1042 (fdb_functional_test+0x0000004e54af)
      11:02:03 #2 filemgr_read /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/filemgr.cc:1989 (fdb_functional_test+0x000000501a8b)
      11:02:03 #3 _docio_read_through_buffer(docio_handle*, unsigned long, err_log_callback*, bool) /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/docio.cc:691 (fdb_functional_test+0x0000004faa70)
      11:02:03 #4 docio_read_doc /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/docio.cc:1212 (fdb_functional_test+0x0000004fbb6f)
      11:02:03 #5 fdb_kvs_header_read /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/kv_instance.cc:1123 (fdb_functional_test+0x00000053261c)
      11:02:03 #6 _fdb_open /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:1954 (fdb_functional_test+0x00000050ac08)
      11:02:03 #7 fdb_open /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:782 (fdb_functional_test+0x0000005090ba)
      11:02:03 #8 _worker_thread(void*) crtstuff.c (fdb_functional_test+0x0000004d184b)
      11:02:03
      11:02:03 Previous read of size 8 at 0x7d64000c7720 by thread T19:
      11:02:03 #0 bcache_read /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/blockcache.cc:904 (fdb_functional_test+0x0000004e502f)
      11:02:03 #1 filemgr_read /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/filemgr.cc:1940 (fdb_functional_test+0x0000005016b6)
      11:02:03 #2 _filemgr_prefetch_thread(void*) /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/filemgr.cc:627 (fdb_functional_test+0x0000004fe583)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            abhinav Abhi Dangeti
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty