MB-19041:ThreadSanitizer data race - disable prefetch thread

Multiple races such as ...
WARNING: ThreadSanitizer: thread leak (pid=108225)
Thread T5 (tid=108255, finished) created by main
thread at:
  pthread_create <null> (fdb_functional_test+0x000000464d21)
  filemgr_open forestdb/src/filemgr.cc:677 (fdb_functional_test+)
  _fdb_open forestdb/src/forestdb.cc:1604 (fdb_functional_test+)
  fdb_open forestdb/src/forestdb.cc:782 (fdb_functional_test+)
  basic_test() crtstuff.c (fdb_functional_test+)
  main crtstuff.c (fdb_functional_test+)

Change-Id: I281877320e2cd592ef427f1022fa02823ed1fa80
Reviewed-on: http://review.couchbase.org/62450
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>